--- a/SisVest.WebUI/Views/Curso/Create.cshtml
+++ b/SisVest.WebUI/Views/Curso/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model SisVest.DomaninModel.Entities.Curso
+﻿@model SisVest.WebUI.Models.CursoModel
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Criar Curso</h2>
+<h2>Create</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Curso</h4>
+        <h4>CursoModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -28,6 +28,22 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Vagas, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Vagas, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TotalCandidatosAprovados, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TotalCandidatosAprovados, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TotalCandidatosAprovados, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TotalCandidatos, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TotalCandidatos, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TotalCandidatos, "", new { @class = "text-danger" })
             </div>
         </div>
 
