--- a/SisVest.WebUI/Views/Curso/Delete.cshtml
+++ b/SisVest.WebUI/Views/Curso/Delete.cshtml
@@ -4,37 +4,38 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Deletar Curso</h2>
+<h2>Delete</h2>
+@using (Html.BeginForm())
+{
+    <div>
+        <h4>Curso</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Descricao)
+            </dt>
 
-<h3>Tem certeza que deseja deletar ?</h3>
-<div>
-    <h4>Curso</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Descricao)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Vagas)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Vagas)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Vagas)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Vagas)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Tela Inicial", "Index")
+        </dl>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
-    }
-</div>
+    </div>
+}
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
