--- a/SisVest.WebUI/Views/Curso/Details.cshtml
+++ b/SisVest.WebUI/Views/Curso/Details.cshtml
@@ -1,13 +1,13 @@
-﻿@model SisVest.DomaninModel.Entities.Curso
+﻿@model SisVest.WebUI.Models.CursoModel
 
 @{
-    ViewBag.Title = "Detalhe";
+    ViewBag.Title = "Details";
 }
 
-<h2>Detalhe do curso</h2>
+<h2>Details</h2>
 
 <div>
-    <h4>Curso</h4>
+    <h4>CursoModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,6 +24,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.Vagas)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalCandidatosAprovados)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalCandidatosAprovados)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalCandidatos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalCandidatos)
         </dd>
 
     </dl>
