--- a/SisVest.WebUI/Views/Curso/Delete.cshtml
+++ b/SisVest.WebUI/Views/Curso/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Deletar Curso</h2>
+<h2>Delete</h2>
 
-<h3>Tem certeza que deseja deletar ?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Curso</h4>
     <hr />
@@ -34,7 +34,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Tela Inicial", "Index")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
