--- a/SisVest.WebUI/Views/Curso/Delete.cshtml
+++ b/SisVest.WebUI/Views/Curso/Delete.cshtml
@@ -1,41 +1,58 @@
-﻿@model SisVest.DomaninModel.Entities.Curso
+﻿@model SisVest.WebUI.Models.CursoModel
 
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
-@using (Html.BeginForm())
-{
-    <div>
-        <h4>Curso</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Descricao)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Descricao)
-            </dd>
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>CursoModel</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Descricao)
+        </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Vagas)
-            </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Descricao)
+        </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Vagas)
-            </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Vagas)
+        </dt>
 
-        </dl>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Delete" class="btn btn-default" />
+        <dd>
+            @Html.DisplayFor(model => model.Vagas)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalCandidatosAprovados)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalCandidatosAprovados)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalCandidatos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalCandidatos)
+        </dd>
+
+    </dl>
+    <di>
+
+        @Html.ActionLink("Delete", "Deletar", new { idCurso = Model.ID })
+    </di>
+    <br /><br />
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to List", "Index")
         </div>
-    </div>
-}
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+    }
+</div>
