--- a/SisVest.WebUI/Views/Curso/Edit.cshtml
+++ b/SisVest.WebUI/Views/Curso/Edit.cshtml
@@ -1,21 +1,20 @@
-﻿@model SisVest.DomaninModel.Entities.Curso
+﻿@model SisVest.WebUI.Models.CursoModel
 
 @{
-    ViewBag.Title = "Alterar";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Alterar</h2>
+<h2>Edit</h2>
+
 
 @using (Html.BeginForm())
 {
-
-
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
-        <h4>Curso</h4>
+        <h4>CursoModel</h4>
         <hr />
-        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
@@ -35,6 +34,22 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.TotalCandidatosAprovados, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TotalCandidatosAprovados, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TotalCandidatosAprovados, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TotalCandidatos, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TotalCandidatos, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TotalCandidatos, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -45,3 +60,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
