--- a/SisVest.WebUI/Views/Vestibular/Delete.cshtml
+++ b/SisVest.WebUI/Views/Vestibular/Delete.cshtml
@@ -48,16 +48,16 @@
             <dd>
                 @Html.DisplayFor(model => model.DataProva)
             </dd>
-    
         </dl>
+
+        <p>
+            @Html.ActionLink("Delete", "Deletar", new { idVestibular = Model.ID })
+
+        </p>
     
         @using (Html.BeginForm()) {
             @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
                 @Html.ActionLink("Back to List", "Index")
-            </div>
         }
     </div>
 </body>
