--- a/SisVest.WebUI/Views/Curso/Index.cshtml
+++ b/SisVest.WebUI/Views/Curso/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SisVest.WebUI.Models.CursoModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista de Cursos";
 }
 
 <h2>Index</h2>
