--- a/SisVest.WebUI/Views/Shared/_Layout.cshtml
+++ b/SisVest.WebUI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/themes/start/jquery-ui-1.8.20.custom.css")" rel="stylesheet" type="text/css" />
+    
+    @*<script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>*@
+
+    
     <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
 </head>
 
