validacao pelo [Required]

--- a/SisVest.WebUI/Views/Curso/Details.cshtml
+++ b/SisVest.WebUI/Views/Curso/Details.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes do curso</h2>
+<p>
+    @Html.ValidationSummary(true)
+</p>
 
 <div>
     <h4>CursoModel</h4>
