--- a/SisVest.WebUI/Views/Curso/Create.cshtml
+++ b/SisVest.WebUI/Views/Curso/Create.cshtml
@@ -4,8 +4,10 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
+<h2>Registro de curso</h2>
+<p>
+    @Html.ValidationSummary(true)
+</p>
 
 @using (Html.BeginForm()) 
 {
