--- a/SisVest.WebUI/Views/Vestibular/Create.cshtml
+++ b/SisVest.WebUI/Views/Vestibular/Create.cshtml
@@ -53,7 +53,6 @@
                     @Html.ValidationMessageFor(model => model.DataProva, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -63,7 +62,7 @@
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Retornar a lista de vestibulares", "Index")
     </div>
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <!-- Load jQuery UI Main JS  -->
