aula 44 verificando se usuario já esta logado no momento da autenticacao

--- a/SisVest.WebUI/Views/Autenticacao/Entrar.cshtml
+++ b/SisVest.WebUI/Views/Autenticacao/Entrar.cshtml
@@ -5,12 +5,25 @@
 
 <h2>Entrar</h2>
 
-@using (@Html.BeginForm()) { 
-
-
-    @Html.EditorForModel()
+@if (ViewBag.Autenticado)
+{
     
+            using (@Html.BeginForm())
+            {
+
+                @Html.EditorForModel()
+
+                <p>
+                    <input type="submit" value="Entrar" />
+                </p>
+            }
+
+}else{
+
     <p>
-        <input type="submit"  value="Entrar"/>
+        "Autenticado " 
     </p>
+     
+
 }
+
