efetuando um sistema de login logout com base em sessao aula 45

--- a/SisVest.WebUI/Views/Autenticacao/Entrar.cshtml
+++ b/SisVest.WebUI/Views/Autenticacao/Entrar.cshtml
@@ -5,25 +5,20 @@
 
 <h2>Entrar</h2>
 
-@if (ViewBag.Autenticado)
+@if (!ViewBag.Autenticado)
 {
-    
             using (@Html.BeginForm())
             {
-
                 @Html.EditorForModel()
-
                 <p>
                     <input type="submit" value="Entrar" />
                 </p>
             }
-
 }else{
 
     <p>
         "Autenticado " 
     </p>
-     
-
+    @Html.ActionLink("Sair","Sair")
 }
 
