--- a/SisVest.WebUI/Views/Admin/Details.cshtml
+++ b/SisVest.WebUI/Views/Admin/Details.cshtml
@@ -45,6 +45,20 @@
     </dl>
 </div>
 <p>
+
     @Html.ActionLink("Delete", "Delete", new { idAdmin = Model.ID }) |
-    @Html.ActionLink("Retorne para a lista", "Index")
+
 </p>
+
+
+<p>
+    <input type="button" value="Voltar" id="btnVoltar" />
+</p>
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<!-- Load jQuery UI Main JS  -->
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script type="text/javascript">
+    $("#btnVoltar").click(function () {
+        location.href = '@Url.Action("Index")';
+    });
+</script>
