--- a/SisVest.WebUI/Views/Admin/Edit.cshtml
+++ b/SisVest.WebUI/Views/Admin/Edit.cshtml
@@ -51,14 +51,15 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" class="btn btn-default" />
+                    <br /><br />
+                    <p>
+                        <input type="button" value="Voltar" id="btnVoltar" />
+                    </p>
                 </div>
             </div>
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Retornar para lista", "Index")
-    </div>
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <!-- Load jQuery UI Main JS  -->
