--- a/SisVest.WebUI/Views/Curso/Details.cshtml
+++ b/SisVest.WebUI/Views/Curso/Details.cshtml
@@ -49,5 +49,17 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { idCurso = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
 </p>
+            <p>
+                <input type="button" value="Voltar" id="btnVoltar" />
+            </p>
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<!-- Load jQuery UI Main JS  -->
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script type="text/javascript">
+                $("#btnVoltar").click(function () {
+                    location.href = '@Url.Action("Index")';
+                });
+</script>
+
