--- a/SisVest.WebUI/Views/Admin/Create.cshtml
+++ b/SisVest.WebUI/Views/Admin/Create.cshtml
@@ -50,12 +50,14 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
+                    
                 </div>
             </div>
         </div>
+    <p>
+        <input type="button" value="Voltar" id="btnVoltar" />
+    </p>
     }
-
-
     <div>
         @Html.ActionLink("Retornar para Lista de Administradores", "Index")
     </div>
